[tool.poetry]
name = "sqlite-wrapper"
version = "0.1.0"
description = ""
authors = ["Andre <pretorius.dre+github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
